2005-11-25  Richard Stellingwerff  <set EMAIL_ADDRESS environment variable>

	* engines/clearlooks/src/animation.c:
	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button), (clearlooks_draw_entry),
	(clearlooks_draw_frame), (clearlooks_draw_tab),
	(clearlooks_draw_normal_arrow), (clearlooks_draw_combo_arrow),
	(clearlooks_draw_arrow):
	* engines/clearlooks/src/clearlooks_style.c: (draw_box):

	Removed most of the #define's in clearlooks_draw, replacing them
	with const's. Slightly modified the border shade of pressed buttons.
	No longer animating progressbars when their allocation has negative
	values. Firefox is an application where this happens, and is the
	prime example of GTK+ fakes where adding timers to the main loop
	has no effect, resulting in choppy progressbar animation.

2005-11-23  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/animation.c: (cl_async_animation_lookup),
	(cl_async_animation_remove), (cl_async_animation_add),
	(cl_async_animation_update), (cl_async_animation_timer_func),
	(cl_async_animation_getdata), (cl_checkbox_toggle),
	(cl_progressbar_add), (cl_disconnect):
	* engines/clearlooks/src/clearlooks_style.c: (draw_box),
	(draw_option), (draw_check), (draw_arrow), (draw_focus),
	(clearlooks_style_unrealize):
	* themes/Clearlooks/gtk-2.0/gtkrc:

	Updated the animation code from Kulyk Nazar's latest patch. Moved all
	animation functions to animations.c. It needs a lot of testing still.
	Changed the bg[ACTIVE] shade to make it a bit lighter.

2005-11-22  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_progressbar_trough):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters):

	Fixed crash in gnumeric. The bug was potentially harmful
	to other apps as well.

2005-11-21  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.ac:

	Update for 2.7.0 release

2005-11-21  Thomas Wood  <thos@gnome.org>
